# performance_calculator

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
performance_calculator/: calculate_github_personal_performance.py  generate_github_builds_raw_data.py  main.py
performance_calculator/calculator_utils/: arguments_helper.py
performance_calculator/github_services/: repository_analyzer.py
tests/github_services/: test_repository_analyzer.py
