[project]
name = "performance-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "karolkaminskihtd",email = "karol.kaminski@htdhealth.com"}
]
license = {text = "MIT"}
readme = "performance_calculator/README.md"
requires-python = "^3.12"
dependencies = [
    "pygithub (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
performance-calculator = "performance_calculator.main:main"
